font-widget: make sure not to pass NULL to check_font_contains_text()

Since FT_Face->family_name can be NULL, g_strconcat() would return NULL
immediately, resulting in an empty font_name.

https://bugzilla.gnome.org/show_bug.cgi?id=675239